# python-openai-agents

./: .gitignore  README.md  pyproject.toml
src/: 01_basic_agent.py
utils/: gemini_setup.py
